--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -229,8 +229,8 @@ There is no need to save manually.
 
 === Back up of data : `backup`
 
-Address book data can be stored in a back up file when necessary. This is good in case any the existing address book is corrupted.
-Format: `exit`
+Address book data can be stored in a back up file when necessary. This is good in case any the existing address book is corrupted. +
+Format: `backup`
 
 === Facebook Search (coming in V2.0)
 
