--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -38,11 +38,13 @@ image::Ui_help.png[width="790"]+
 * **`add`**`n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01` : adds a contact named `John Doe` to the Address Book.
 * **`delete`**`3` : deletes the 3rd contact shown in the current list
 * *`exit`* : exits the app
-.  The following is an example of a successful execution of commands. +
+.  The following is an example of a successful execution of commands. 
++
 image::Ui_Success.png[width="790"]
 +
-.  The following is an example of a unsuccessful execution of commands. +
-image::Ui_Success.png[width="790"]
+.  The following is an example of a unsuccessful execution of commands. 
++
+image::Ui_short_error.png[width="790"]
 +
 .  Refer to the link:#features[Features] section below for details of each command.
 
