--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -364,12 +364,34 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 
 Certain properties of the application can be controlled (e.g App name, logging level) through the configuration file (default: `config.json`).
 
+// tag::import[]
+=== Import mechanism
+
+The import mechanism is essentially adding multiple contacts to the address book automatically by referencing a xml file.
+
+The Import Command is implemented this way, where user will specify the filePath:
+[source,java]
+----
+public ImportCommand(String filePath) {
+       this.filePath = filePath;
+}
+----
+
+[NOTE]
+If the filePath is invalid, then there are no file that is readable and hence, an exception will be thrown. Users will be notified to check their filePath.
+
+The following activity diagram summarize what happens inside the `ImportCommand` when a user executes this command:
+
+image::ImportCommandActivityDiagram.png[width="200"]
+
 == Documentation
 
 We use asciidoc for writing documentation.
 
 [NOTE]
-We chose asciidoc over Markdown because asciidoc, although a bit more complex than Markdown, provides more flexibility in formatting.
+We chose asciidoc over Markdown because asciidoc, although a bit more complex than Markdown, provides more flexibility in formatting. It supports adding of new contacts and will skip known contacts residing in the address book.
+
+
 
 === Editing Documentation
 
