--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -911,7 +911,7 @@ private void handleSwitchTabEvent(SwitchTabRequestEvent event) {
 }
 ----
 
-image::switch_tab_sequence_diagram.png
+image::switch_tab_sequence_diagram.png[width:800]
 
 Possible Future Implementations:
 
@@ -1186,6 +1186,8 @@ the username and password.
 
 // tag::styling[]
 === UI Styling
+
+image::Ui_Breakdown.png[width:800]
 
 The main styling for the `UI` can be found in `DarkTheme.css`. The document has been divided into the following sections:
 
