--- a/docs/TestScript.adoc
+++ b/docs/TestScript.adoc
@@ -16,12 +16,14 @@ By: `Team F09-B1`      Since: `AUG 2017`      Licence: `MIT`
 
 == Instructions
 
-1. Unzip the folder SampleData.zip and .jar file.
-2. There are two files inside: residentbook.xml and eventbook.xml.
+1. Download the SampleData.zip and .jar file.
+2. Unzip the folder SampleData.zip.
+2. There are 4 files inside: residentbook.xml, eventbook.xml, exchangeStudent.xml and SampleImage.jpg.
 3. Put the .jar file into an empty folder.
-4. Create another empty folder inside this folder and name it "data"
-5. Copy residentbook.xml and eventbook.xml and paste inside "data" folder.
-6. Double click the .jar file, the residents and events are now loaded into the ResidentBook.
+4. Create an empty folder inside this folder and name it "data".
+5. Go into the "data" folder, create an empty folder and name it "contact_images".
+6. Copy residentbook.xml and eventbook.xml and paste inside "data" folder.
+7. Double click the .jar file, the residents and events are now loaded into the ResidentBook.
 
 == Manual Testing
 
