--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -541,29 +541,52 @@ The actual update of the image is implemented by reloading the `Person` passed t
 
 ==== Design Considerations
 
-* Alternatives Considered:
+**Alternatives Considered:**
 
-* Alternative 1: Omit creation of resident's image
-Addition of images directly from the user specified path and not saving their duplicates was considered due to it's simplicity as well as having the added benefit of not saving a duplicate of the picture. However, this would also mean that it would be impossible for the application to be portable since the images could not be possibly be bundled together when the user wants to migrate the application to another platform.
+**Alternative 1: Omit creation of resident's image**
+**Pros:** Addition of images directly from the user specified path and not saving their duplicates was considered due to it's simplicity as well as having the added benefit of not saving a duplicate of the picture.
+**Cons:** This would also mean that it would be impossible for the application to be portable since the images could not be possibly be bundled together when the user wants to migrate the application to another platform.
 
-* Alternative 2: Implementing Add/Delete Image as UNDOABLE commands
-Implementing image commands as UNDOABLE commands would grant the user the convenience of adding back an image they accidentally deleted. However, the implementation of such a feature would be very complex (especially when 'alternative 1', omitting the resident's image is not an option). Furthermore, this would mean saving multiple images of the same person to allow for addition/deletion, which would be a huge burden on the space required to run the application.
+**Alternative 2: Implementing Add/Delete Image as UNDOABLE commands**
+**Pros:** Implementing image commands as UNDOABLE commands would grant the user the convenience of adding back an image they accidentally deleted.
+**Cons:** The implementation of such a feature would be very complex (especially when 'alternative 1', omitting the resident's image is not an option). Furthermore, this would mean saving multiple images of the same person to allow for addition/deletion, which would be a huge burden on the space required to run the application.
 
 // end::picture[]
 
 // tag::autocomplete[]
-=== Autocomplete Feature
+=== Auto-complete Feature
 
 The autocomplete mechanism implements a list of commands to be auto-completed upon user input
 
-The autocomplete list is obtained from the creation of an AutoComplete object and is automatically updated since it utilizes the model within the LogicManager
+It is implemented as a SuggestionsProvider object complementing the TextField.
 
 [source,java]
 ----
-    /**
-     * Updates AutoComplete suggestions according to user typed input
-     * @param userInput
-     */
+    public void initAutoComplete() {
+        suggestions = SuggestionProvider.create((Arrays.asList(logic.getAutoCompleteList())));
+        TextFields.bindAutoCompletion(commandTextField, suggestions);
+    }
+----
+
+The AutoComplete Class stores a list of base commands that is final.
+Additionally, it stores:
+* A string array of currently displayed autocomplete phrases which is instantiated to the base commands.
+* ArrayList of residents names as strings that is updated upon update in the model
+
+[source,java]
+----
+    public static final String[] BASE_COMMANDS = { "add", "addEvent", "addImage", "backup", "edit", "select", "delete",
+        "deleteByTag", "deleteEvent", "deleteImage", "deleteTag", "clear", "find", "list", "highlight", "history",
+        "import", "exit", "help", "undo", "redo", "sort", "swaproom", "switch"
+    };
+    private ArrayList<String> personsStringArray;
+    private String[] autoCompleteList;
+----
+
+The String array of currently displayed phrases is updated upon every update instance of the user input to correctly display the current autocomplete phrases.
+
+[source,java]
+----
     public void updateAutoCompleteList(String userInput) {
         switch (userInput) {
         case "":
