--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -595,15 +595,31 @@ The String array of currently displayed phrases is updated upon every update ins
         case "find":
             this.autoCompleteList = getConcatPersonsArray("find");
             break;
-        case "edit":
-            this.autoCompleteList = getConcatPersonsArray("edit");
-            break;
-        case "delete":
-            this.autoCompleteList = getConcatPersonsArray("delete");
-            break;
-        case "select":
         ...
 ----
+
+The `smart` feature of the autocomplete feature in that it will display person names or indexes when certain commands are typed is implemented by concatenating resident names or indexes to the end of the search phrase. 
+
+[source,java]
+----
+    public void updateAutoCompleteList(String userInput) {
+        switch (userInput) {
+        case "":
+            this.resetAutocompleteList();
+            break;
+        case "find":
+            this.autoCompleteList = getConcatResidentsArray("find");
+            break;
+          ...
+
+    private String[] getConcatResidentsArray(String command) {
+        String[] newAutoCompleteList = new String[personsStringArray.size()];
+        for (int i = 0; i < personsStringArray.size(); i++) {
+            if (command.equals("find")) {
+                newAutoCompleteList[i] = command + " " + personsStringArray.get(i);
+            ...
+----
+
 
 // end::autocomplete[]
 
@@ -903,6 +919,62 @@ following considerations:
 * Ambiguity will be introduced into this command. The user may not know if by supplying multiple tags, the application will
 delete persons who have all the tags supplied, or delete all persons who has any of the tags supplied.
 
+// tag::personPanel[]
+=== PersonPanel Interface
+
+The Person Panel interface is implemented as a JavaFX StackPane
+
+When a `PersonCard` in the `PersonListPanel` is selected, additional information of the resident is displayed in the PersonPanel.
+When no person is selected, the default PersonPanel pane is loaded with the image edition buttons disable and all fields set as `-`.
+
+[source, java]
+----
+    private void loadDefaultScreen() {
+        name.textProperty().setValue("No Resident Selected");
+        phone.textProperty().setValue("-");
+        address.textProperty().setValue("-");
+        email.textProperty().setValue("-");
+        enableButtons(false);
+    }
+----
+
+The update of information in the PersonPanel is handled by the following method and `loadPersonInformation` is invoked every time a change is detected.
+
+[source, java]
+----
+    @Subscribe
+    private void handlePersonPanelSelectionChangedEvent(PersonPanelSelectionChangedEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        loadPersonInformation(event.getNewSelection().person);
+    }
+----
+
+To load the image of the person in the PersonPanel, it is imperative that the jar path is checked to indicated `production` or `development` environments.
+
+[source, java]
+----
+    private void initImage() {
+        try {
+            initProjectImage();
+        } catch (Exception pfnfe) {
+            try {
+                initJarImage();
+            ...
+----
+
+==== Design Considerations
+
+**Alternatives Considered:**
+
+**Alternative 1:** Popup Panel instead of permanent display panel +
+**Pros:** +
+* UI space is conserved which would leave more room for viewing Calendar events.
+**Cons:** +
+* Popup window would obstruct the view of the Calendar when the user wishes to both view both resident info and Calendar at the same time.
+* Future implementations could include additional event info in the Panel as well, which means it would be infeasible to make the panel small enough to implement as a popup.
+
+
+// end::personPanel[]
 
 // tag::Calendar[]
 === Calendar Interface
